src/bindings/c/CPLC.h

extern "C" void CPLC_scatter(double* scatterarray, int* scatter_shape, int* limits, 
                             double* recvarray, int* recv_shape);
extern "C" void CPLC_load_param_file(const char* fname);
extern "C" void CPLC_close_param_file();
extern "C" void CPLC_get_real_param(const char* section, const char* param_name, double* real_param);
extern "C" void CPLC_get_real_array_param(const char* section, const char* param_name, double** real_param_array, int* array_len);
extern "C" void CPLC_get_int_param(const char* section, const char* param_name, int* int_param);
extern "C" void CPLC_get_int_array_param(const char* section, const char* param_name, int** int_param_array, int* array_len);
extern "C" void CPLC_get_boolean_param(const char* section, const char* param_name, bool* boolean_param);
extern "C" void CPLC_get_boolean_array_param(const char* section, const char* param_name, bool** boolean_param_array, int* array_len);
extern "C" void CPLC_get_string_param(const char* section, const char* param_name, char** string_param);