src/bindings/c/CPLC.f90

!
!    ________/\\\\\\\\\__/\\\\\\\\\\\\\____/\\\_____________
!     _____/\\\////////__\/\\\/////////\\\_\/\\\_____________
!      ___/\\\/___________\/\\\_______\/\\\_\/\\\_____________
!       __/\\\_____________\/\\\\\\\\\\\\\/__\/\\\_____________
!        _\/\\\_____________\/\\\/////////____\/\\\_____________
!         _\//\\\____________\/\\\_____________\/\\\_____________
!          __\///\\\__________\/\\\_____________\/\\\_____________
!           ____\////\\\\\\\\\_\/\\\_____________\/\\\\\\\\\\\\\\\_
!            _______\/////////__\///______________\///////////////__
!
!
!                         C P L  -  L I B R A R Y
!
!           Copyright (C) 2012-2015 Edward Smith & David Trevelyan
!
!License
!
!   This file is part of CPL-Library.
!
!   CPL-Library is free software: you can redistribute it and/or modify
!   it under the terms of the GNU General Public License as published by
!   the Free Software Foundation, either version 3 of the License, or
!   (at your option) any later version.
!
!   CPL-Library is distributed in the hope that it will be useful,
!   but WITHOUT ANY WARRANTY; without even the implied warranty of
!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
!   GNU General Public License for more details.
!
!   You should have received a copy of the GNU General Public License
!   along with CPL-Library.  If not, see <http://www.gnu.org/licenses/>.
!
!
!Description
!
!   Wrappers for the functions found in cpl/src/libsrc/coupler.f90 and
!   cpl/src/libsrc/coupler_module.f90, bound for use with C-type languages.
!
!   The call-signatures for the C-bound functions sometimes require extra
!   arguments to specify shapes of arrays that were otherwise not required by
!   Fortran module interfaces. In light of this difference, the prefixes for
!   each function have been changed from "CPL_" to "CPLC_". So, for example,
!   CPLC_scatter takes extra arguments that define the shape of the array
!   inputs, and wraps CPL_scatter from the original library functions.
!
!   Also included are a number of "get"-style functions for coupler variables.
!
!Author(s)
!
!   David Trevelyan, Eduardo Ramos Fernandez
!

module CPLC

    use iso_c_binding
    implicit none

contains

    !Convert c bool to fortran
    subroutine C_F_BOOL(cbool, fbool)
        logical(C_BOOL),intent(in) :: cbool
        logical,intent(out) :: fbool
        if (cbool) then
            fbool = .true.
        else
            fbool = .false.
        endif
    end subroutine C_F_BOOL

    !Convert fortran to c bool
    subroutine F_C_BOOL(fbool, cbool)
        logical,intent(in) :: fbool
        logical(C_BOOL),intent(out) :: cbool
        if (fbool) then
            cbool = .true.
        else
            cbool = .false.
        endif
    end subroutine F_C_BOOL

    !Convert fortran to C array of booleans
    subroutine F_C_BOOL_ARRAY(fbool_array, cbool_array)
        implicit none

        logical, dimension(:), intent(in) :: fbool_array
        logical(C_BOOL), dimension(:), intent(out) :: cbool_array
        integer :: i

        do i = 1, size(fbool_array)
            call F_C_BOOL(fbool_array(i), cbool_array(i))
        end do
    end subroutine F_C_BOOL_ARRAY

    !Convert C to fortran array of booleans
    subroutine C_F_BOOL_ARRAY(cbool_array, fbool_array)
        implicit none

        logical(C_BOOL), dimension(:), intent(in) :: cbool_array
        logical, dimension(:), intent(out) :: fbool_array
        integer :: i

        do i = 1, size(cbool_array)
            call C_F_BOOL(cbool_array(i), fbool_array(i))
        end do
    end subroutine C_F_BOOL_ARRAY
 
    ! CPL_io module routines

    subroutine c_f_string(c_string, f_string)
        implicit none 
        type(C_PTR), intent(in) :: c_string
        character(:), intent(out), allocatable :: f_string
        ! Array for accessing string pointed at by C pointer 
        character, pointer :: string_ptr(:)
        integer :: i    ! string index
        interface
          ! Steal std C library function rather than writing our own.
          function strlen(s) bind(c, name='strlen')
            use iso_c_binding 
            implicit none
            !----
            type(C_PTR), intent(in), value :: s
            integer(c_size_t) :: strlen
          end function strlen
        end interface
        !****
        ! Map C pointer to fortran character array
        call c_f_pointer(c_string, string_ptr, [strlen(c_string)])
        ! Allocate fortran character variable to the c string's length
        allocate(character(size(string_ptr)) :: f_string)
        ! Copy across (with possible kind conversion) characters
        do i = 1, size(string_ptr)
            f_string(i:i) = string_ptr(i)
        end do
    end subroutine c_f_string      

    subroutine f_c_string(f_string, c_string)
        implicit none

        type(C_PTR), intent(out) :: c_string
        character(len=:), intent(inout), allocatable, target :: f_string

        f_string = f_string//C_NULL_CHAR
        c_string = c_loc(f_string)
    end subroutine f_c_string

    subroutine f_c_string_array(f_string_array, c_string_array)
        use commondefs, only: CPL_STRING_MAX_LEN
        implicit none

        type(C_PTR), dimension(:), allocatable, intent(out) :: c_string_array
        integer :: i, s_len
        character(len=CPL_STRING_MAX_LEN), dimension(:), target, allocatable,intent(inout):: f_string_array

        print*, "INSIDE0"
        allocate(c_string_array(size(f_string_array)))
        print*, "INSIDE1"
        do i = 1, size(f_string_array)
            s_len = len_trim(f_string_array(i))
            print*, "loop:",i
            f_string_array(i)(s_len+1:s_len+1) = C_NULL_CHAR
            c_string_array(i) = c_loc(f_string_array(i))
        end do

        print*, "INSIDE2"

    end subroutine f_c_string_array

#ifdef JSON_SUPPORT
    subroutine CPLC_load_param_file(fname) &
        bind (C, name="CPLC_load_param_file")
        use CPL, only: CPL_load_param_file
        implicit none

        type(C_PTR), intent(in), value :: fname
        character(:), allocatable :: fname_f

        call c_f_string(fname, fname_f)

        call CPL_load_param_file(fname_f)

    end subroutine  CPLC_load_param_file

    subroutine CPLC_close_param_file() &
        bind (C, name="CPLC_close_param_file")
        use CPL, only: CPL_close_param_file
        implicit none

        call CPL_close_param_file()
    end subroutine

    subroutine CPLC_get_real_param(section, param_name, real_param) &
        bind (C, name="CPLC_get_real_param")
        use CPL, only: get_real_param 
        implicit none
        
        real(C_DOUBLE), intent(out) :: real_param
        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section
        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_real_param(section_f, param_name_f, real_param)

    end subroutine CPLC_get_real_param

    subroutine CPLC_get_real_array_param(section, param_name, real_array_param, array_len) &
        bind (C, name="CPLC_get_real_array_param")
        use CPL, only: get_real_array_param
        implicit none
        
        integer(C_INT), intent(out) :: array_len
        type(C_PTR), intent(out) :: real_array_param

        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section

        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f
        real(kind(0.d0)), dimension(:), allocatable, target, save:: real_array_param_f
        !real(kind(0.d0)), dimension(:), pointer :: r_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_real_array_param(section_f, param_name_f, real_array_param_f)

        real_array_param = c_loc(real_array_param_f(1))
        array_len = size(real_array_param_f)
    end subroutine CPLC_get_real_array_param


    subroutine CPLC_get_boolean_param(section, param_name, boolean_param) &
        bind (C, name="CPLC_get_boolean_param")
        use CPL, only: get_boolean_param
        implicit none
        
        logical(C_BOOL), intent(out) :: boolean_param
        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section
        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f
        logical :: boolean_param_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call C_F_BOOL(boolean_param, boolean_param_f) 
        call get_boolean_param(section_f, param_name_f, boolean_param_f)
        call F_C_BOOL(boolean_param_f, boolean_param) 

    end subroutine CPLC_get_boolean_param

    subroutine CPLC_get_boolean_array_param(section, param_name, boolean_array_param, array_len) &
        bind (C, name="CPLC_get_boolean_array_param")
        use CPL, only: get_boolean_array_param
        implicit none
        
        integer(C_INT), intent(out) :: array_len
        type(C_PTR), intent(out) :: boolean_array_param

        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section

        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f
        logical, dimension(:), allocatable :: boolean_array_param_f
        logical(C_BOOL), dimension(:), allocatable, target, save:: boolean_array_param_c
        !boolean(kind(0.d0)), dimension(:), pointer :: r_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_boolean_array_param(section_f, param_name_f, boolean_array_param_f)
        allocate(boolean_array_param_c(size(boolean_array_param_f)))
        call F_C_BOOL_ARRAY(boolean_array_param_f, boolean_array_param_c)

        boolean_array_param = c_loc(boolean_array_param_c(1))
        array_len = size(boolean_array_param_c)
    end subroutine CPLC_get_boolean_array_param
 
    
   subroutine CPLC_get_int_param(section, param_name, int_param) &
        bind (C, name="CPLC_get_int_param")
        use CPL, only: get_int_param
        implicit none
        
        integer(C_INT), intent(out) :: int_param
        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section
        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_int_param(section_f, param_name_f, int_param)

    end subroutine CPLC_get_int_param


    subroutine CPLC_get_int_array_param(section, param_name, int_array_param, array_len) &
        bind (C, name="CPLC_get_int_array_param")
        use CPL, only: get_int_array_param
        implicit none
        
        integer(C_INT), intent(out) :: array_len
        type(C_PTR), intent(out) :: int_array_param

        type(C_PTR), intent(in), value :: param_name
        type(C_PTR), intent(in), value :: section

        character(:), allocatable :: param_name_f
        character(:), allocatable :: section_f
        integer, dimension(:), allocatable, target, save :: int_array_param_f

        call c_f_string(param_name, param_name_f)
        call c_f_string(section, section_f)

        call get_int_array_param(section_f, param_name_f, int_array_param_f)
        int_array_param = c_loc(int_array_param_f)
        array_len = size(int_array_param_f)
    end subroutine CPLC_get_int_array_param

   subroutine CPLC_get_string_param(section, param_name, string_param) &
        bind (C, name="CPLC_get_string_param")
        use CPL, only: get_string_param
        implicit none
